[project]
name = "kcal-cli"
version = "0.1.0"
description = "Non-interactive CLI for managing local iCalendar (.ics) files"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "hebbian" }]
keywords = ["calendar", "ics", "ical", "korganizer", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "icalendar>=6.0.0",
]

[project.scripts]
kcal = "kcal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["kcal.py"]
